--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js"   
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RamonJul/burger.git"
-  },
+  },  
   "author": "",
   "license": "ISC",
   "bugs": {
